# stow

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FIXME.md  LICENSE  README.md  devenv.nix  flake.nix  howto-to-release.md  release-plz.toml
.agents/skills/release-plz-changelog/: SKILL.md
.agents/skills/release-plz-changelog/agents/: openai.yaml
.cargo/: config.toml
.github/workflows/: release-artifacts.yml  release-plz.yml
src/: app_error.rs  cli.rs  command.rs  daemon.rs  docker.rs  fs_utils.rs  gitlab.rs  hashing.rs  main.rs  manifest.rs  reconcile.rs  sops.rs  state.rs  suggest.rs  systemd.rs  test_support.rs  util.rs
