[package]
name = "stow"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "stow"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
which = "4.4"
serde_json = "1.0"
percent-encoding = "2.3"
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.14.0"
flate2 = "1.1.9"
tar = { version = "0.4.46", default-features = false }
ureq = { version = "2.9", features = ["json", "tls"] }
